PCS BAckup 26Dec2023/Backup-Source/objects/GCP_PMP_PGI_Data__c.object
<CustomObject>
    <fields>
        <fullName>Customer_Order_Trend__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Order Trend</label>
        <referenceTo>Vision_GCP_Customer_Order_Trend__c</referenceTo>
        <relationshipLabel>GCP PMP PGI Data</relationshipLabel>
        <relationshipName>GCP_PMP_PGI_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <label>Test</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Order Created</fullName>
                </value>
                <value>
                    <fullName>Order Received</fullName>
                </value>
                <value>
                    <fullName>Order Shipped</fullName>
                </value>
                <value>
                    <fullName>Order Delivered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vision_GCP_Unique_Identifier__c</fullName>
        <label>GCP Unique Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vision_gcp_base_uom__c</fullName>
        <label>GCP Base UOM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vision_gcp_batch_number__c</fullName>
        <label>GCP Batch Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vision_gcp_city__c</fullName>
        <label>GCP City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vision_gcp_create_date__c</fullName>
        <label>GCP Create Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vision_gcp_delivery__c</fullName>
        <label>GCP Delivery</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vision_gcp_delivery_crea_date__c</fullName>
        <label>GCP Delivery Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vision_gcp_delivery_doc_date__c</fullName>
        <label>GCP Delivery Doc Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vision_gcp_description__c</fullName>
        <label>GCP Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vision_gcp_gross_amount__c</fullName>
        <label>GCP Gross Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vision_gcp_invoice__c</fullName>
        <label>GCP Invoice</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vision_gcp_invoice_date__c</fullName>
        <label>GCP Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vision_gcp_line_item__c</fullName>
        <label>GCP Line Item</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vision_gcp_ndc__c</fullName>
        <label>GCP NDC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vision_gcp_net_amount__c</fullName>
        <label>GCP Net Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vision_gcp_net_weight__c</fullName>
        <label>GCP Net Weight</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vision_gcp_order_number__c</fullName>
        <label>GCP Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vision_gcp_pgi_date__c</fullName>
        <label>GCP PGI Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vision_gcp_po_date__c</fullName>
        <label>GCP PO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vision_gcp_po_number__c</fullName>
        <label>GCP PO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vision_gcp_quantity_in_base_uom__c</fullName>
        <label>GCP Quantity in Base UOM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vision_gcp_quantity_in_order_uom__c</fullName>
        <label>GCP Quantity in Order UOM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vision_gcp_requested_delivery_date__c</fullName>
        <label>GCP Requested Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vision_gcp_sap_material__c</fullName>
        <label>GCP SAP Material</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vision_gcp_ship_to_cus_name__c</fullName>
        <label>GCP Ship to Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vision_gcp_ship_to_customer__c</fullName>
        <label>GCP Ship to Customer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vision_gcp_shipping_method__c</fullName>
        <label>GCP Shipping Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vision_gcp_sold_to_customer__c</fullName>
        <label>GCP Sold to Customer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vision_gcp_sold_to_customer_name__c</fullName>
        <label>GCP Sold to Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vision_gcp_state__c</fullName>
        <label>GCP State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vision_gcp_tracking_number__c</fullName>
        <label>GCP Tracking Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vision_gcp_update_date__c</fullName>
        <description>This field is when GCP is pulling their data</description>
        <label>Data Lake Update Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vision_product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>GCP PMP PGI Data</relationshipLabel>
        <relationshipName>GCP_PMP_PGI_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>GCP PMP PGI Data</label>
    <nameField>
        <displayFormat>pmp-pgi-{00000}</displayFormat>
        <label>GCP PMP PGI Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GCP PMP PGI Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>